resolves #35: Recreate blog title display to be more visible

--- a/src/input.css
+++ b/src/input.css
@@ -10,4 +10,12 @@
   .grid-cols-auto-2 {
     grid-template-columns: auto auto;
   }
+
+  .aspect-1-1 {
+    aspect-ratio: 1 / 1;
+  }
+
+  .divider-base-content {
+    @apply before:bg-base-content after:bg-base-content;
+  }
 }
